<resources>
    <string name="app_name">哈哈手机计时</string>
    <drawable name="button_unselect">#ffffff</drawable>
    <drawable name="select_color">#f5f5f5</drawable>
    <drawable name="unselect_color">#ffffff</drawable>
    <drawable name="button_select">#f19228</drawable>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="properties">SlidingMenu Properties</string>
    <string name="general">General</string>
    <string name="viewpager">ViewPager</string>
    <string name="attach">Attach</string>
    <string name="title_bar">Title Bar Options</string>
    <string name="title_bar_slide">Sliding Title Bar</string>
    <string name="title_bar_content">Sliding Content Only</string>
    <string name="animations">Custom Animations</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="responsive_ui">Responsive UI</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_and_right">Left and Right</string>
    <string name="github">GitHub</string>
    <string name="github_label">SlidingMenu on GitHub</string>
    <string name="what_is_this">What is this?</string>
    <string name="responsive_explanation">This is an example of a UI that responds well to device type. On phones, the menu will be placed inside a SlidingMenu, while on tablets the menu will be exposed alongside the content because we have enough room to always show it.</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="contact">Contact</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- refresh -->
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新…</string>
    <string name="p2refresh_doing_end_refresh">加载中…</string>
    <string name="p2refresh_refresh_lasttime">最近更新 : </string>
    <!-- login -->
    <string name="login_username_null">用户名为空</string>
    <string name="login_password_null">密码为空</string>
    <string name="login_username_password_notnull">用户名密码为空</string>
    <string name="login_account">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_password_new">输入新密码：</string>
    <string name="login_password_new_again">再次输入新密码：</string>
    <string name="login_confim_password_and_login">确认修改</string>
    <!-- 图片处理 -->
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="crop">裁剪</string>
    <string name="rotate">旋转</string>
    <string name="rotate_left">向左旋转</string>
    <string name="rotate_right">向右旋转</string>
    <string name="reverse_transform">反转</string>
    <string name="resize">缩放</string>
    <string name="tone">调色</string>
    <string name="saturation">饱和度</string>
    <string name="lightness">亮度</string>
    <string name="contrast">色相</string>
    <string name="frame_doodle">边框涂鸦</string>
    <string name="frame">边框</string>
    <string name="doodle">涂鸦</string>
    <string name="running_face_detection">请稍等</string>
    <string name="multiface_crop_help">"轻点一张脸开始裁剪。"</string>
    <string name="saving_image">"正在保存照片..."</string>
    <string name="choose_img">请选择图片</string>
    <string name="load_failure">图片加载失败</string>
    <string name="resize_one_to_two">"1 to 2"</string>
    <string name="resize_one_to_three">"1 to 3"</string>
    <string name="resize_one_to_four">"1 to 4"</string>
    <string name="save_bitmap">正在保存图片...</string>
    <string name="no_found">没有找到图片哦</string>
    <string name="specific">特效</string>
    <string name="handling">处理中，请稍候...</string>
    <string-array name="specific_item">
        <item>怀旧</item>
        <item>模糊</item>
        <item>锐化</item>
        <item>叠加</item>
        <item>底片</item>
        <item>浮雕</item>
        <item>光照</item>
        <item>霓虹</item>
        <item>重叠</item>
    </string-array>
    <string name="mark_all_read">全部已读</string>
    <string name="title_activity_web_enroll">WebEnrollActivity</string>
    <string name="confirm">确定</string>
    <string name="title_activity_camer">CamerActivity</string>
    <string name="title_activity_no_order_record">NoOrderRecordActivity</string>
    <string name="title_activity_activity__zhuce">Activity_Zhuce</string>
    <string name="title_activity_activity__per_infor">Activity_PerInfor</string>
    <string name="title_activity_activity__pay">Activity_Pay</string>
    <string name="title_activity_activity__home">Activity_Home</string>
    <string name="title_activity_activity__qrcode">Activity_QRcode</string>
    <string name="appointment_tuijian">智能推荐驾校</string>
    <string name="appointment_changdi">驾校、场地分布</string>
    <string name="appointment_jiaolian">100%好评教练</string>
    <string name="appoint_item_jiaxiao">驾校：</string>
    <string name="appoint_item_dizhi">地址：</string>
    <string name="appoint_item_jiage">价格：</string>
    <string name="appoint_item_haoping">好评：</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appoint_haoping_name">姓名:</string>
    <string name="appoint_haoping_schollname">驾校:</string>
    <string name="appoint_list2_sevice">服务</string>
    <string name="appointment_list2_techage">教龄</string>
    <string name="appointment_list2_pricename">价格:</string>
    <string name="appointment_list2_haoping">好评:</string>
    <string name="title_activity_map_show">Activity_MapShow</string>
</resources>
