<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/appoint_listview1_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/appoint_xjjv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appoint_item_jiaxiao"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appoint_item_dizhi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appoint_item_jiage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appoint_item_haoping" />


    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/appoint_listview1_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="1111111111"
            />
        <TextView
            android:id="@+id/appoint_listview1_item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2222222"
            />
        <TextView
            android:id="@+id/appoint_listview1_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="333333333"/>
        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:stepSize="1.0"
            android:rating="2"
            android:progressTint="#FF8C00"
           />

    </LinearLayout>

</LinearLayout>