<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/appoint_listview2_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/appoint_xjjv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appoint_haoping_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/appoint_haoping_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appoint_haoping_name"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/appoint_haoping_schollname" />

            <TextView
                android:id="@+id/appointment_list2_schollname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:text="@string/appoint_list2_sevice" />

            <TextView
                android:id="@+id/appointment_list2_servicecount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="88ci" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"

                android:text="@string/appointment_list2_techage" />

            <TextView
                android:id="@+id/appointment_list2_techage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10年" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_list2_pricename" />

            <TextView
                android:id="@+id/appointment_list2_pricenow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100wan"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/appointment_list2_pricebef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="111"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:src="@drawable/appointment_soifvui"
                />

            <TextView
                android:id="@+id/appointment_list2_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="10km"
                />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_list2_haoping"
                />
            <RatingBar
                android:id="@+id/appointment_list2_ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:stepSize="1.0"
                android:rating="2"
                android:progressTint="#FF8C00"
                />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>